--- a/bg_counter/pubspec.yaml
+++ b/bg_counter/pubspec.yaml
@@ -23,11 +23,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.1
+  flutter_foreground_service_plugin: ^0.1.5
+  get_storage: ^1.4.0
 
 dev_dependencies:
   flutter_test:
