fall back to Get.Storage

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,8 @@ dependencies:
   cupertino_icons: ^1.0.1
   flutter_foreground_service_plugin: ^0.1.5
   get_storage: ^1.4.0
-  shared_preferences: ^0.5.12+4
+  # shared_preferences: ^0.5.12+4
+  ntp: ^1.0.7
 
 dev_dependencies:
   flutter_test:
